<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_screen" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:src="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/partimerLogo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_green_white"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/partimerLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcometext"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/email_hint"
            android:fontFamily="sans-serif-thin"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_lay"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_lay"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password_hint"
            android:fontFamily="sans-serif-thin"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/login_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_lay"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button_back"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_view_dont_hv_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/already_have_an_account_sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
