<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_screen" />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/partimerLogo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_green_white"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/partimerLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_below="@+id/welcometext"-->
    <!--        android:scrollbarStyle="insideOverlay">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcometext"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buissness_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/buissness_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/business_name_hint"
                android:inputType="textCapSentences"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buissness_lay"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name_hint"
                android:inputType="textCapSentences"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_lay"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/white"
                android:hint="@string/first_last_hint"
                android:inputType="textCapSentences"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_lay"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_lay"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_lay"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_lay"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ageement"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_lay"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="155dp"
            android:layout_height="55dp"
            android:layout_below="@+id/ageement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/intro_btn"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
            android:paddingEnd="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />


    </RelativeLayout>
    <!--    </ScrollView>-->

    <TextView
        android:id="@+id/alreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"

        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="Already have an account?"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>
