<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.VerifyStudentDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="@dimen/dimen_55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/sendCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:text="Verify your university Email ID"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:hint="Enter email" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/verifyCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="@dimen/dimen_20dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:text="@string/verify_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp" />

        <com.mukeshsolanki.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:inputType="text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:OtpHideLineWhenFilled="true"
            app:OtpItemCount="6"
            app:OtpItemSpacing="6dp"
            app:OtpLineColor="@color/colorPrimary"
            app:OtpState_filled="true"
            app:OtpViewType="line" />


        <TextView
            android:id="@+id/txt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp_view"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/otp_text"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/time"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:onClick="ResendOtp"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/resend"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="@dimen/layout_space_10"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/change_package"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tv_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="SKIP"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/book_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="SAVE"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>